add Query param "fields"
